<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/alarm"
            android:title="@string/emergency_assistance" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/information"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/report"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>


</menu>
