<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:padding="16dp"
        android:layout_centerVertical="true"
        android:background="@drawable/cardview_layout">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/Dark"
            android:fontFamily="sans-serif-medium"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/create_your_account" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:id="@+id/uploaded_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/placeholder"
            android:layout_below="@+id/heading"
            app:civ_border_color="#FF000000"/>

        <EditText
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_19sdp"
            android:id="@+id/txtFirstName"
            android:inputType="text"
            android:textSize="@dimen/_10sdp"
            android:layout_below="@+id/uploaded_image"
            android:layout_width="match_parent"
            android:hint="@string/first_name"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/login_edittext_layout"/>

        <EditText
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:inputType="text"
            android:id="@+id/txtLastName"
            android:textSize="@dimen/_10sdp"
            android:layout_below="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:hint="@string/last_name"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/login_edittext_layout"/>

        <EditText
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:inputType="number"
            android:maxLength="10"
            android:id="@+id/txtPhoneNumber"
            android:textSize="@dimen/_10sdp"
            android:layout_below="@+id/txtLastName"
            android:layout_width="match_parent"
            android:hint="@string/phone_number"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/login_edittext_layout"/>

        <EditText
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:inputType="textEmailAddress"
            android:id="@+id/txtEmailAddress"
            android:textSize="@dimen/_10sdp"
            android:layout_below="@+id/txtPhoneNumber"
            android:layout_width="match_parent"
            android:hint="@string/email_address"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/login_edittext_layout"/>

        <EditText
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:inputType="textPassword"
            android:id="@+id/txtPassword"
            android:textSize="@dimen/_10sdp"
            android:layout_below="@+id/txtEmailAddress"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/login_edittext_layout"/>

        <EditText
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:inputType="textPassword"
            android:id="@+id/txtConfirmPassword"
            android:textSize="@dimen/_10sdp"
            android:layout_below="@+id/txtPassword"
            android:layout_width="match_parent"
            android:hint="@string/confirm_password"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/login_edittext_layout"/>

        <Button
            android:id="@+id/btn_next"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:background="@drawable/login_button_layout"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_below="@+id/txtConfirmPassword"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/_14sdp"/>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/textView7"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="10dp"
                android:text="@string/sign_in_cap" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>



