<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_height="400dp"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_centerVertical="true"
        android:background="@drawable/front_layer">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/Dark"
            android:fontFamily="sans-serif-medium"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/login_here" />

        <TextView
            android:id="@+id/sub_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textColor="@color/Dark"
            android:layout_below="@id/heading"
            android:fontFamily="sans-serif-medium"
            android:textSize="12sp"
            android:textStyle="italic"
            android:text="@string/welcome_to_motorcyclist_safety_assistant_app" />

        <EditText
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:id="@+id/txtEmailAddress"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_10sdp"
            android:layout_below="@+id/heading"
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/login_edittext_layout"/>

        <EditText
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:inputType="textPassword"
            android:id="@+id/txtPassword"
            android:textSize="@dimen/_10sdp"
            android:layout_below="@+id/txtEmailAddress"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/login_edittext_layout"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_19sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/txtPassword"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/btn_local_login"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            android:background="@drawable/login_button_layout"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_below="@+id/signInButton"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/_14sdp"/>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/if_you_don_t_have_account" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/textView7"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="10dp"
                android:text="@string/sign_up" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>



